# hdtSMP64

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  clang-format.yml  cpp-linter.yml
cmake/: Plugin.h.in  version.rc.in
cmake/ports/bullet3/: README.md  portfile.cmake  usage  vcpkg.json
cmake/ports/rapidjson/: portfile.cmake
cmake/triplets/: x64-windows-static-md-avx.cmake  x64-windows-static-md-avx2.cmake  x64-windows-static-md-avx512.cmake
configs/: configs.xml  configs.xsd
fomod tree/: Readme.txt
fomod tree/configs/: configs-compatibility.xml  configs-performance.xml  configs-quality.xml  configs-reasonable.xml
fomod tree/fomod/: ModuleConfig.xml  info.xml
ports/: update-bullet.ps1
src/: ActorManager.cpp  ActorManager.h  CMakeLists.txt  DynamicHDT.cpp  DynamicHDT.h  EventDebugLogger.cpp  EventDebugLogger.h  Events.cpp  Events.h  FrameworkUtils.h  HavokUtils.h  Hooks.cpp  Hooks.h  IString.h  Main.h  NetImmerseUtils.h  PCH.h  PluginAPI.h  PluginInterfaceImpl.cpp  PluginInterfaceImpl.h  StringImpl.cpp  StringImpl.h  WeatherManager.cpp  WeatherManager.h  XmlReader.cpp  XmlReader.h  config.cpp  config.h  dhdtOverrideManager.cpp  dhdtOverrideManager.h  dhdtPapyrusFunctions.cpp  dhdtPapyrusFunctions.h  hdtConvertNi.cpp  hdtConvertNi.h  hdtDefaultBBP.cpp  hdtDefaultBBP.h  hdtForceUpdateList.cpp  hdtForceUpdateList.h  hdtPhysicsProfiler.cpp  hdtPhysicsProfiler.h  (+11 more)
src/XmlInspector/: CharactersReader.hpp  CharactersWriter.hpp  XmlInspector.hpp
src/hdtSkinnedMesh/: hdtAABB.h  hdtBone.h  hdtBoneScaleConstraint.cpp  hdtBoneScaleConstraint.h  hdtBulletHelper.h  hdtCollider.cpp  hdtCollider.h  hdtCollisionAlgorithm.cpp  hdtCollisionAlgorithm.h  hdtConeTwistConstraint.cpp  hdtConeTwistConstraint.h  hdtConstraintGroup.h  hdtDispatcher.cpp  hdtDispatcher.h  hdtGeneric6DofConstraint.cpp  hdtGeneric6DofConstraint.h  hdtGroupConstraintSolver.cpp  hdtGroupConstraintSolver.h  hdtSimulationIslandManager.cpp  hdtSimulationIslandManager.h  hdtSkinnedMeshAlgorithm.cpp  hdtSkinnedMeshAlgorithm.h  hdtSkinnedMeshBody.cpp  hdtSkinnedMeshBody.h  hdtSkinnedMeshBone.cpp  hdtSkinnedMeshBone.h  hdtSkinnedMeshShape.cpp  hdtSkinnedMeshShape.h  hdtSkinnedMeshSystem.cpp  hdtSkinnedMeshSystem.h  hdtSkinnedMeshWorld.cpp  hdtSkinnedMeshWorld.h  hdtStiffSpringConstraint.cpp  hdtStiffSpringConstraint.h  hdtVertex.cpp  hdtVertex.h
